tests/neg/syntax_error/src/main/scala/Main.scala
object Main:
  def foo(): Int = {
    42
// missing closing brace for object
